--- a/enquire.html
+++ b/enquire.html
@@ -357,7 +357,8 @@ footer span{
 
   <nav class="primary">
     <a href="index.html">HOME</a>
-    <a href="services.html">SERVICES</a>
+    <a href="service.html">SERVICES</a>
+    <a href="help.html">HELP</a>
     <a href="contact.html">CONTACT</a>
     <div class="underline-bar" id="underlineBar"></div>
   </nav>
@@ -369,7 +370,8 @@ footer span{
 
   <div class="nav-dropdown" id="navDropdown">
     <a href="index.html">HOME</a>
-    <a href="services.html">SERVICES</a>
+    <a href="service.html">SERVICES</a>
+    <a href="help.html">HELP</a>
     <a href="contact.html">CONTACT</a>
   </div>
 
@@ -395,7 +397,7 @@ footer span{
 
     <div class="subcard">
       <div class="sub-img">
-        <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?q=80">
+        <img src="https://plus.unsplash.com/premium_photo-1682146717223-874ac7dcc607?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
       </div>
       <div class="sub-content">
         <div class="sub-title">Cinematic Visual Craft</div>
@@ -405,7 +407,7 @@ footer span{
 
     <div class="subcard">
       <div class="sub-img">
-        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?q=80">
+        <img src="https://plus.unsplash.com/premium_photo-1661962349501-10bf5556f79b?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
       </div>
       <div class="sub-content">
         <div class="sub-title">Fast, Reliable Delivery</div>
@@ -415,7 +417,7 @@ footer span{
 
     <div class="subcard">
       <div class="sub-img">
-        <img src="https://images.unsplash.com/photo-1557682224-5b8590cd9ec5?q=80">
+        <img src="https://plus.unsplash.com/premium_photo-1661329803216-a6b8ff6ff177?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
       </div>
       <div class="sub-content">
         <div class="sub-title">Brand Customisation</div>
@@ -425,7 +427,7 @@ footer span{
 
     <div class="subcard">
       <div class="sub-img">
-        <img src="https://images.unsplash.com/photo-1531497865144-0464ef8fb9a9?q=80">
+        <img src="https://images.unsplash.com/photo-1519791883288-dc8bd696e667?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
       </div>
       <div class="sub-content">
         <div class="sub-title">Results-Focused Storytelling</div>
@@ -440,7 +442,7 @@ footer span{
 
 <!-- FOOTER -->
 <footer>
-  © <span>StudioVyne™</span> — All Rights Reserved
+  © <span>StudioVyne™</span> — Crafted with care
 </footer>
 
 <!-- MODAL -->
