--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,8 @@
   --accent-grad: linear-gradient(135deg,#ff66c1,#ff9ab0 40%,#ffd18c 80%);
   --glass: rgba(255,255,255,0.03);
   --btn-border: rgba(255,255,255,0.16);
-  --card-radius:14px;
-  --card-pad:28px;
+  --card-radius:18px;
+  --card-pad:32px;
 }
 
 /* RESET */
@@ -27,31 +27,22 @@
 html,body{height:100%;scroll-behavior:smooth}
 body{
   font-family:Inter,system-ui;
-  background:#000;
+  background:url("https://images.unsplash.com/photo-1589987637306-05ee56dab871?q=80&w=1740&auto=format&fit=crop") center/cover fixed;
   color:#fff;
-  -webkit-font-smoothing:antialiased;
 }
 
-/* ---------------- NAV ---------------- */
+/* ================= NAV ================= */
 .nav-wrap{
   position:fixed;
-  top:18px;
-  left:0;
-  right:0;
-  display:flex;
-  justify-content:center;
+  top:18px;left:0;right:0;
+  display:flex;justify-content:center;
   z-index:220;
 }
 
 .nav{
-  width:98%;
-  max-width:1400px;
-  height:84px;
-  border-radius:20px;
-  padding:12px 28px;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
+  width:98%;max-width:1400px;height:84px;
+  border-radius:20px;padding:12px 28px;
+  display:flex;align-items:center;justify-content:space-between;
   background:rgba(255,255,255,0.08);
   backdrop-filter:blur(10px);
   box-shadow:0 20px 60px rgba(0,0,0,0.5);
@@ -59,13 +50,14 @@ body{
 
 .brand-wrap{display:flex;align-items:center;gap:12px}
 .brand-logo{
-  width:48px;height:48px;border-radius:50%;object-fit:cover;
-  box-shadow:0 0 12px rgba(255,190,160,0.4)
+  width:48px;height:48px;border-radius:50%;
+  object-fit:cover;box-shadow:0 0 12px rgba(255,190,160,0.4)
 }
 
 .brand{
   font-family:'Space Grotesk';font-weight:800;font-size:1.4rem;
-  background:var(--accent-grad);-webkit-background-clip:text;-webkit-text-fill-color:transparent;
+  background:var(--accent-grad);-webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
   text-shadow:0 0 12px rgba(255,190,160,0.4);
 }
 
@@ -78,11 +70,11 @@ nav.primary a:hover{transform:translateY(-2px)}
 nav.primary a::after{
   content:"";position:absolute;bottom:-6px;left:0;height:3px;width:0%;
   background:linear-gradient(90deg,#ff66c1,#ffd18c);border-radius:4px;
-  box-shadow:0 0 12px rgba(255,190,160,0.5);transition:width .35s
+  box-shadow:0 0 12px rgba(255,190,160,0.5);
+  transition:width .35s;
 }
 nav.primary a:hover::after{width:100%}
 
-/* HAMBURGER */
 .menu-btn{
   width:34px;height:18px;display:none;
   flex-direction:column;justify-content:space-between;cursor:pointer;
@@ -102,175 +94,191 @@ nav.primary a:hover::after{width:100%}
   .menu-btn{display:flex}
 }
 
-/* ---------------- NEW FLOATING DROPDOWN ---------------- */
+/* MOBILE DROPDOWN */
 .mobile-dropdown{
   position:fixed;
-  top:115px; /* elegant floating gap */
-  left:50%;
-  transform:translateX(-50%);
-  width:88%;
-  max-width:820px;
-
+  top:115px;left:50%;transform:translateX(-50%);
+  width:88%;max-width:820px;
   background:rgba(255,255,255,0.015);
-  backdrop-filter:blur(4px);
-  -webkit-backdrop-filter:blur(4px);
-
+  backdrop-filter:blur(4px);-webkit-backdrop-filter:blur(4px);
   border:1px solid rgba(255,255,255,0.10);
   border-radius:16px;
-
   padding:14px 0;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  gap:10px;
-
-  opacity:0;
-  pointer-events:none;
-  transform-origin:top center;
-  transform:translate(-50%, -14px);
+  display:flex;flex-direction:column;
+  align-items:center;gap:10px;
+  opacity:0;pointer-events:none;
   transition:opacity .22s ease, transform .22s ease;
-
   z-index:3000;
 }
-
 .mobile-dropdown.active{
-  opacity:1;
-  pointer-events:auto;
-  transform:translate(-50%, 0);
+  opacity:1;pointer-events:auto;transform:translate(-50%,0);
 }
-
 .mobile-dropdown a{
   font-family:'Space Grotesk';
-  font-weight:800;
-  font-size:0.95rem;
-  letter-spacing:1.4px;
-  text-decoration:none;
-  color:white;
+  font-weight:800;font-size:0.95rem;
+  letter-spacing:1.4px;color:white;text-decoration:none;
 }
 
-/* ---------------- HERO ---------------- */
-.hero{
-  min-height:70vh;
-  display:flex;align-items:center;justify-content:center;
-  padding:48px 20px;text-align:center;
-  background-image:url('https://images.unsplash.com/photo-1760784879929-eb7ea4ee6958?auto=format&fit=crop&w=1740&q=80');
-  background-size:cover;background-position:center;position:relative;
-}
-.hero::before{content:'';position:absolute;inset:0;background:rgba(0,0,0,0.5)}
-.hero-inner{position:relative;z-index:2}
+/* =============== CONTACT SECTION =============== */
 
-.hero h1{
-  font-family:'Space Grotesk';font-weight:800;
-  font-size:clamp(2.4rem,5vw,3.8rem);margin-bottom:10px;
-  background:var(--accent-grad);-webkit-background-clip:text;-webkit-text-fill-color:transparent;
-}
-.hero p{color:rgba(255,255,255,0.9);margin-bottom:12px;font-size:1.05rem}
-.down-symbol{margin-top:8px;font-size:1.6rem;opacity:.8;animation:bob 1.6s infinite}
-@keyframes bob{0%,100%{transform:translateY(0)}50%{transform:translateY(6px)}}
-
-/* ---------------- SECTION ---------------- */
 .section{
-  max-width:var(--max);margin:0 auto;
-  padding:70px 20px 110px;
+  max-width:var(--max);
+  margin:140px auto 80px;
+  padding:0 20px 80px;
 }
+
 .title{
   font-family:'Space Grotesk';font-weight:800;
-  font-size:clamp(2rem,4vw,3.2rem);text-align:center;margin-bottom:12px;
-  background:var(--accent-grad);-webkit-background-clip:text;-webkit-text-fill-color:transparent;
-}
-.desc{
-  text-align:center;max-width:900px;margin:0 auto 32px;
-  color:rgba(255,255,255,0.88);font-size:1.04rem;
-}
-
-/* ---------------- CARDS ---------------- */
-.cards{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:24px;
-}
-
-@media(min-width:901px){
-  .cards{grid-template-columns:repeat(4,1fr);grid-auto-rows:minmax(140px,auto)}
-  .card:nth-child(1){grid-column:1/span 2;min-height:220px}
-  .card:nth-child(2){grid-column:3/span 1;grid-row:1/span 2;min-height:460px}
-  .card:nth-child(3){grid-column:4/span 1;min-height:220px}
-  .card:nth-child(4){grid-column:1/span 2;min-height:220px}
-}
-
-.card{
-  background:var(--glass);border-radius:var(--card-radius);
-  padding:var(--card-pad);border:1px solid rgba(255,255,255,0.06);
-  box-shadow:0 30px 80px rgba(0,0,0,0.6);position:relative;
-}
-.card::before{
-  content:"";position:absolute;inset:0;border-radius:inherit;padding:1px;
-  background:linear-gradient(135deg,#ff66c1,#ffd18c);
-  -webkit-mask:linear-gradient(#fff 0 0) content-box,linear-gradient(#fff 0 0);
-  -webkit-mask-composite:xor;mask-composite:exclude;
-}
-
-.title-sub{
-  font-family:'Space Grotesk';font-weight:800;font-size:1.25rem;
-  margin-bottom:12px;background:var(--accent-grad);
+  font-size:clamp(2rem,4vw,3.2rem);
+  text-align:center;margin-bottom:12px;
+  background:var(--accent-grad);
   -webkit-background-clip:text;-webkit-text-fill-color:transparent;
 }
 
-.kicker{
-  color:rgba(255,255,255,0.92);line-height:1.7;font-size:1rem;
+.desc{
+  text-align:center;max-width:760px;margin:0 auto 40px;
+  font-size:1.05rem;color:rgba(255,255,255,0.85);
 }
 
-.cta-wrap{margin-top:18px}
+/* =============== STACKED CARDS =============== */
 
-/* ------- BUTTON ------- */
+.cards{
+  display:flex;
+  flex-direction:column;
+  gap:28px;
+  width:100%;
+}
+
+.card{
+  background:rgba(0,0,0,0.55);
+  backdrop-filter:blur(10px);
+  border-radius:var(--card-radius);
+  padding:var(--card-pad);
+  border:1px solid rgba(255,255,255,0.12);
+  box-shadow:0 22px 60px rgba(0,0,0,0.55);
+  position:relative;
+  text-align:center;
+}
+
+.card::before{
+  content:"";
+  position:absolute;inset:0;
+  border-radius:inherit;
+  padding:1px;
+  background:var(--accent-grad);
+  -webkit-mask:linear-gradient(#fff 0 0) content-box,linear-gradient(#fff 0 0);
+  -webkit-mask-composite:xor;
+  mask-composite:exclude;
+  opacity:0.35;
+}
+
+.title-sub{
+  font-family:'Space Grotesk';
+  font-weight:800;
+  font-size:1.45rem;
+  margin-bottom:18px;
+  background:var(--accent-grad);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+}
+
+.kicker{
+  color:#e7e7e7;
+  line-height:1.75;
+  font-size:1.05rem;
+  margin-bottom:22px;
+}
+
+/* BUTTON */
+.cta-wrap{display:flex;justify-content:center;}
+
 .btn{
   display:inline-flex;align-items:center;justify-content:center;
-  padding:7px 16px;border-radius:999px;border:1px solid var(--btn-border);
-  background:rgba(255,255,255,0.05);color:white;
-  font-family:'Space Grotesk';font-weight:800;font-size:0.88rem;
-  cursor:pointer;text-decoration:none;position:relative;overflow:hidden;
-  transition:.28s cubic-bezier(.2,.9,.2,1);
+  padding:7px 18px;border-radius:999px;
+  border:1px solid var(--btn-border);
+  background:rgba(255,255,255,0.06);
+  color:white;font-family:'Space Grotesk';
+  font-weight:800;font-size:0.9rem;
+  cursor:pointer;position:relative;overflow:hidden;
+  text-decoration:none !important; /* NO UNDERLINE */
 }
 .btn .fill{
-  position:absolute;inset:0;border-radius:inherit;background:var(--accent-grad);
-  transform:scaleX(0);transform-origin:left;transition:.42s cubic-bezier(.2,.9,.2,1);
-  z-index:1;opacity:.98;
+  position:absolute;inset:0;background:var(--accent-grad);
+  transform:scaleX(0);transform-origin:left;
+  transition:.45s;z-index:1;
 }
 .btn span{position:relative;z-index:2}
-.btn:hover{
-  transform:translateY(-4px) scale(1.05);
-  box-shadow:0 14px 40px rgba(255,140,200,0.14);
-}
 .btn:hover .fill{transform:scaleX(1)}
+.btn:hover{transform:translateY(-3px)}
 
-/* ---------------- POPUP ---------------- */
+/* =============== POPUP =============== */
+
 .overlay{
-  position:fixed;inset:0;display:none;
-  justify-content:center;align-items:center;
-  background:rgba(0,0,0,.6);backdrop-filter:blur(6px);
-  z-index:7000;
+  position:fixed;inset:0;
+  background:rgba(0,0,0,0.65);
+  backdrop-filter:blur(6px);
+  display:none;
+  justify-content:center;
+  align-items:center;
+  z-index:9999;
 }
+
 .form-popup{
-  width:95%;max-width:460px;padding:28px;border-radius:14px;
-  background:rgba(255,255,255,0.04);
-  border:1px solid rgba(255,255,255,0.08);
+  width:95%;max-width:460px;
+  background:rgba(0,0,0,0.75);
+  padding:26px;
+  border-radius:16px;
+  border:1px solid rgba(255,255,255,0.15);
+  position:relative;
+  box-shadow:0 20px 60px rgba(0,0,0,0.8);
 }
-.form-popup input,.form-popup textarea{
-  width:100%;padding:12px 14px;margin-bottom:12px;border-radius:10px;
-  border:none;background:rgba(255,255,255,0.06);color:white;
+
+.close-btn{
+  position:absolute;
+  top:14px;
+  right:18px;
+  font-size:1.4rem;
+  cursor:pointer;
+  color:white;
+  z-index:20;
+}
+
+/* center submit button */
+#contactForm { text-align:center; }
+#contactForm button {
+  margin-left:auto;
+  margin-right:auto;
+  display:block;
+}
+
+.form-popup input,
+.form-popup textarea{
+  width:100%;background:rgba(255,255,255,0.06);
+  border:none;color:white;
+  padding:12px 14px;border-radius:10px;
+  margin-bottom:12px;
 }
 .form-popup textarea{height:110px;resize:none}
-.close-btn{
-  position:absolute;top:12px;right:16px;font-size:1.25rem;cursor:pointer;
+
+footer{
+  text-align:center;
+  padding:40px 0;
+  margin-top:60px;
+  font-family:'Space Grotesk';
+  font-weight:800;
+  font-size:1rem;
+
+  background:var(--accent-grad);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
 }
 
-footer{text-align:center;padding:30px 0;color:rgba(255,255,255,0.75);font-size:0.95rem}
 </style>
 </head>
 
 <body>
 
-<!-- NAV -->
+<!-- NAV BAR -->
 <div class="nav-wrap">
   <header class="nav">
     <div class="brand-wrap">
@@ -280,7 +288,8 @@ footer{text-align:center;padding:30px 0;color:rgba(255,255,255,0.75);font-size:0
 
     <nav class="primary">
       <a href="index.html">HOME</a>
-      <a href="help.html">HELP</a>
+      <a href="service.html">SERVICES</a>
+      <a href="contact.html">HELP</a>
     </nav>
 
     <div class="menu-btn" id="menuBtn">
@@ -290,58 +299,58 @@ footer{text-align:center;padding:30px 0;color:rgba(255,255,255,0.75);font-size:0
   </header>
 </div>
 
-<!-- FLOATING DROPDOWN -->
+<!-- MOBILE DROPDOWN -->
 <div class="mobile-dropdown" id="mobileDropdown">
   <a href="index.html">HOME</a>
-  <a href="help.html">HELP</a>
+  <a href="service.html">SERVICES</a>
+  <a href="contact.html">HELP</a>
 </div>
 
-<!-- HERO -->
-<section class="hero">
-  <div class="hero-inner">
-    <h1>Let's Connect</h1>
-    <p>Reach out, collaborate, and craft something timeless with StudioVyne.</p>
-    <div class="down-symbol" onclick="document.querySelector('.section').scrollIntoView({behavior:'smooth'})">↓</div>
-  </div>
-</section>
-
-<!-- CONTENT -->
+<!-- CONTACT SECTION -->
 <section class="section">
   <div class="title">Get In Touch</div>
-  <div class="desc">We’re here to listen, discuss, and create — from ideas to strategy to final delivery.</div>
+  <div class="desc">
+    We’re here to listen, discuss, and create — from ideas to strategy to final delivery.
+  </div>
 
   <div class="cards">
 
-    <article class="card">
-      <div class="title-sub">Mail Us</div>
-      <div class="kicker">For inquiries and collaborations — we usually respond within a day.</div>
-      <div class="cta-wrap"><button class="btn" id="openMailForm"><span class="fill"></span><span>Send Mail</span></button></div>
-    </article>
-
+    <!-- WHATSAPP -->
     <article class="card">
       <div class="title-sub">Chat on WhatsApp</div>
-      <div class="kicker">Connect directly with a StudioVyne team member.</div>
-      <div class="cta-wrap"><button class="btn" id="chatNow"><span class="fill"></span><span>Chat Now</span></button></div>
-    </article>
-
-    <article class="card">
-      <div class="title-sub">Reach Us</div>
       <div class="kicker">
-        <strong>Email:</strong> hello@studiovyne.com<br>
-        <strong>Phone:</strong> +91 00000 00000<br>
-        <strong>Location:</strong> India
+        Reach us instantly for quick questions, updates, or project discussions.<br>
+        We usually reply within a few minutes during working hours.
+      </div>
+      <div class="cta-wrap">
+        <button class="btn" id="chatNow"><span class="fill"></span><span>Chat Now</span></button>
       </div>
     </article>
 
+    <!-- MAIL -->
     <article class="card">
-      <div class="title-sub">Ready to Begin?</div>
-      <div class="kicker">Explore our creative services — from branding to digital experience design.</div>
-      <div class="cta-wrap"><a class="btn" href="index.html#services"><span class="fill"></span><span>See Services</span></a></div>
+      <div class="title-sub">Mail Us</div>
+      <div class="kicker">
+        Perfect for detailed enquiries, attachments, and collaborative proposals.<br>
+        Share your vision and we'll respond with clarity and the next steps.
+      </div>
+      <div class="cta-wrap">
+        <button class="btn" id="openMailForm"><span class="fill"></span><span>Send Mail</span></button>
+      </div>
     </article>
 
+    <!-- PHONE -->
     <article class="card">
-      <div class="title-sub">Follow Us</div>
-      <div class="kicker">Stay updated with our latest stories — Instagram · LinkedIn · Behance.</div>
+      <div class="title-sub">Reach Us</div>
+      <div class="kicker">
+        Prefer speaking directly? We're here to discuss ideas, timelines,<br>
+        pricing, and help you understand which service fits best.<br><br>
+        <strong>Email:</strong> StudioVyne.Service@gmail.com<br>
+        <strong>Phone:</strong> +91 00000 00000
+      </div>
+      <div class="cta-wrap">
+        <a class="btn" href="tel:+910000000000"><span class="fill"></span><span>Call Now</span></a>
+      </div>
     </article>
 
   </div>
@@ -349,43 +358,46 @@ footer{text-align:center;padding:30px 0;color:rgba(255,255,255,0.75);font-size:0
 
 <footer>© 2025 StudioVyne — Crafted with care</footer>
 
-<!-- POPUP -->
+<!-- POPUP FORM -->
 <div class="overlay" id="formOverlay">
   <div class="form-popup">
     <div class="close-btn" id="closeForm">×</div>
-    <h2 style="text-align:center;background:var(--accent-grad);-webkit-background-clip:text;-webkit-text-fill-color:transparent;font-family:'Space Grotesk';">Send us a Message</h2>
+
+    <h2 style="text-align:center;background:var(--accent-grad);
+    -webkit-background-clip:text;-webkit-text-fill-color:transparent;
+    font-family:'Space Grotesk';margin-bottom:14px;">
+      Send us a Message
+    </h2>
 
     <form id="contactForm">
       <input id="name" name="name" placeholder="Your Name" required>
       <input id="email" name="email" type="email" placeholder="Your Email" required>
-      <textarea id="message" name="message" placeholder="Tell us what you want to enquire..." required></textarea>
-      <button type="submit" class="btn" style="margin-top:8px"><span class="fill"></span><span>Submit</span></button>
+      <textarea id="message" name="message" placeholder="Tell us what you what you have in mind..." required></textarea>
+
+      <button type="submit" class="btn">
+        <span class="fill"></span><span>Submit</span>
+      </button>
     </form>
   </div>
 </div>
 
 <script>
-/* EMAILJS */
+/* EMAILJS INIT */
 emailjs.init("pHf4VY7iCqzN-DF4u");
 
-/* NEW FLOATING DROPDOWN LOGIC */
+/* HAMBURGER MENU */
 const ham = document.getElementById("menuBtn");
 const dropdown = document.getElementById("mobileDropdown");
-
 ham.addEventListener("click", () => {
   ham.classList.toggle("active");
   dropdown.classList.toggle("active");
 });
-
-/* Close when clicking a menu link */
 dropdown.querySelectorAll("a").forEach(link => {
   link.addEventListener("click", () => {
     ham.classList.remove("active");
     dropdown.classList.remove("active");
   });
 });
-
-/* Click outside to close */
 document.addEventListener("click", (e) => {
   if (!ham.contains(e.target) && !dropdown.contains(e.target)) {
     ham.classList.remove("active");
@@ -394,19 +406,19 @@ document.addEventListener("click", (e) => {
 });
 
 /* POPUP FORM */
-const overlay = document.getElementById('formOverlay');
-document.getElementById('openMailForm').addEventListener('click', () => overlay.style.display='flex');
-document.getElementById('closeForm').addEventListener('click', () => overlay.style.display='none');
-overlay.addEventListener('click', e => { if(e.target===overlay) overlay.style.display='none'; });
+const overlay=document.getElementById('formOverlay');
+document.getElementById('openMailForm').onclick=()=>overlay.style.display='flex';
+document.getElementById('closeForm').onclick=()=>overlay.style.display='none';
+overlay.addEventListener('click',e=>{if(e.target===overlay)overlay.style.display='none'});
 
-/* WHATSAPP */
-document.getElementById('chatNow').addEventListener('click',()=>{
+/* WHATSAPP BUTTON */
+document.getElementById('chatNow').onclick=()=>{
   const phone="910000000000";
   const msg=encodeURIComponent("Hi StudioVyne! I'm interested in your services.");
   window.open(`https://wa.me/${phone}?text=${msg}`,"_blank");
-});
+};
 
-/* SEND EMAIL */
+/* EMAILJS SEND */
 document.getElementById('contactForm').addEventListener('submit',function(e){
   e.preventDefault();
   const d={
